2010-08-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_events.cpp (event): fixed #1660 "Crash when
	cut-and-pasting firewall between libraries". GUI crashed if user
	performed the following sequence: cut an object, switch to a
	different object library, try to paste using keyboard shortcut
	Ctrl-V while library object was selected in the tree.

2010-08-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::finalize): fixed #1664 "Policy
	import creates firewall object w/o version". This also fixes
	crash reported in SF bug #3036934

	* pixAdvancedDialog.cpp (pixAdvancedDialog::displayCommands):
	fixed SF bug #3038945 "ASA inspect configurations not saved".
	Under some circumstances the GUI did not save changes made in the
	"Inspectors" tab of the PIX advanced settings dialog into the
	object.

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::removeObjectFromHistory):
	fixed #1661 "Crash after deleting firewall" a sequence where user deleted
	an object and then hit "Back" button caused crash.

2010-08-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* pixAdvancedDialog.cpp (pixAdvancedDialog): fixed SF bug #3038948
	"ASA logging severity levels are incremented". Log levels in the
	"Logging" tab of the PIX firewall advanced settings were
	incremented every time user opened the dialog and then clicked OK.

	* PolicyCompiler_PrintRule.cpp (_printIP): fixed SF bug #3038636
	@v4.1b, "iptables v1.4.8: unknown option `--ra'". Ipv4options
	module has changed in iptables 1.4.3 and now accepts different set
	of parameters. Policy compiler generates new parameters if user
	set version in the firewall object dialog to "1.4.3 or later".

2010-08-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* InterfaceDialog.cpp (loadFWObject): fixed #1657 "When no network
	zone is defined on the interface, the Interface object editor says
	it is "Any" which is a lie"

	* configlets/linux24/run_time_address_tables: fixed #1652 "support