@@ -1,3 +1,10 @@
+2010-08-06  vadim  <vadim@vk.crocodile.org>
+
+	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::clearObjects):
+	fixed crash that happened on Mac if the GUI was started with a
+	file name as command line argument. The issue was introduced recently
+	when GUI state update was reimplemented as an event.
+
 2010-08-05  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* ProjectPanel_events.cpp (event): fixed #1660 "Crash when
